magic link method cleanup

--- a/internal/templates/magic-link.html
+++ b/internal/templates/magic-link.html
@@ -41,7 +41,7 @@
     <br>
     <p>Someone requested a magic log in link for this email address. If you did not do this, you can safely ignore this message.</p>
     <br>
-    <a href="https://www.example.com/api/v1/magic?token={{.Token}}">
+    <a href="http://localhost:5173/magic?token={{.Token}}">
       <button class="fancy-btn">Log In</button>
     </a>
   </div>
